# blackjack-devops

./: .env.example  .gitignore  Dockerfile  README.md  REPORT.md  azure-pipelines.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: __init__.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  card.py  database.py  schemas.py
app/routes/: __init__.py  game.py  health.py
app/services/: __init__.py  game_service.py  metrics_service.py
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: blackjack.json
static/css/: style.css
static/js/: script.js
templates/: index.html
tests/: conftest.py  test_api.py  test_card.py  test_game_service.py  test_metrics.py
